force-app/main/default/objects/Canned_Job__c/Canned_Job__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>Canned Job</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Canned Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>