force-app/main/default/objects/Canned_Job__c/fields/Claim_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Approval_Date__c</fullName>
    <label>Claim Approval Date</label>
    <type>Date</type>
</CustomField>