force-app/main/default/objects/Canned_Job__c/fields/Claim_Labor_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claim_Labor_Paid_Amount__c</fullName>
    <label>Claim Labor Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>