force-app/main/default/objects/Canned_Job__c/fields/Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status__c</fullName>
    <label>Claim Status(Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>