force-app/main/default/objects/Canned_Job__c/fields/Customer_Pay__c.field-meta.xml
<CustomField>
    <fullName>Customer_Pay__c</fullName>
    <label>Customer Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>