force-app/main/default/objects/Canned_Job__c/fields/Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Efficiency__c</fullName>
    <formula>(No_of_Labors__c / (TWO_Worked_Hour__c * 10))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Efficiency</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>