force-app/main/default/objects/Canned_Job__c/fields/Lake_Call__c.field-meta.xml
<CustomField>
    <fullName>Lake_Call__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lake Call</fullName>
            </value>
            <value>
                <fullName>Drop Off</fullName>
            </value>
            <value>
                <fullName>Pick Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>