force-app/main/default/objects/Canned_Job__c/fields/Misc_Charge_3__c.field-meta.xml
<CustomField>
    <fullName>Misc_Charge_3__c</fullName>
    <label>Misc Charge 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>