force-app/main/default/objects/Canned_Job__c/fields/No_of_Labors__c.field-meta.xml
<CustomField>
    <fullName>No_of_Labors__c</fullName>
    <inlineHelpText>Specifies the number of Labor assigned to fulfil the Job.</inlineHelpText>
    <label>No of Labor Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>