force-app/main/default/objects/Canned_Job__c/fields/Parts_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Parts_Paid_Amount__c</fullName>
    <label>Parts Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>