force-app/main/default/objects/Canned_Job__c/fields/Price_per_Labor__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Labor__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Specifies the Price for each Labor working on the Job</inlineHelpText>
    <label>Price per Labor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>