force-app/main/default/objects/Canned_Job__c/fields/Return_Parts_Amount__c.field-meta.xml
<CustomField>
    <fullName>Return_Parts_Amount__c</fullName>
    <label>Return Parts Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>