force-app/main/default/objects/Canned_Job__c/fields/TotalLineItemsPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalLineItemsPrice__c</fullName>
    <inlineHelpText>Roll up Summary : Calculates the Total Price of all the Line Items</inlineHelpText>
    <label>Total Line Items Price</label>
    <summarizedField>Canned_Job_Line_Item__c.Price__c</summarizedField>
    <summaryForeignKey>Canned_Job_Line_Item__c.Related_to_Canned_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>