force-app/main/default/objects/Canned_Job__c/fields/TotalLineItemsQuantity__c.field-meta.xml
<CustomField>
    <fullName>TotalLineItemsQuantity__c</fullName>
    <inlineHelpText>Roll up Summary : Calculates the Total Quantity of all the Line Items</inlineHelpText>
    <label>Total Line Items Quantity</label>
    <summarizedField>Canned_Job_Line_Item__c.Quantity__c</summarizedField>
    <summaryForeignKey>Canned_Job_Line_Item__c.Related_to_Canned_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>