force-app/main/default/objects/Canned_Job__c/fields/TotalPaid1__c.field-meta.xml
<CustomField>
    <fullName>TotalPaid1__c</fullName>
    <formula>No_of_Labors__c * Price_per_Labor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>